--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index Page</title>
 </head>
-<body>
-    
+<body style="background: aquamarine;">
+    <h1 style="color: grey; text-align: center;">This is my main landing page</h1>
+    <p style="text-align: center;">just want to try git commands i.e git checkout</p>
 </body>
 </html>
