--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <body style="background: aquamarine;">
     <h1 style="color: grey; text-align: center;">This is my main landing page</h1>
     <p style="text-align: center;">just want to try git commands i.e git checkout</p>
+    <div>
+        <ul style="display: flex; gap: 20px; list-style: none;">
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="monument.html">Monument</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </div>
+        
 </body>
 </html>
