--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <title>About</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">this is about page</h1>
 </body>
 </html>
