--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <title>About</title>
 </head>
 <body>
-    <h1 style="text-align: center;">this is about page</h1>
+    <h1 style="text-align: center; color: dimgray;">this is about page</h1>
 </body>
 </html>
