Placed navbar at default point

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Index Page</title>
 </head>
 <body style="background: aquamarine;">
-    <h1 style="color: grey; text-align: center;">This is my main landing page</h1>
-    <p style="text-align: center;">just want to try git commands i.e git checkout</p>
     <div>
         <ul style="display: flex; gap: 20px; list-style: none;">
             <li><a href="contact.html">Contact</a></li>
@@ -15,4 +13,8 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </div>
+    <h1 style="color: grey; text-align: center;">This is my main landing page</h1>
+    <p style="text-align: center;">just want to try git commands i.e git checkout</p>
+</body>
+</html>
         
