index save for merging

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <li><a href="about.html">About</a></li>
         </ul>
         
-        <h1 style="color: grey; text-align: center;">This is my main landing page</h1>
+    <h1 style="color: grey; text-align: center;">This is my main landing page</h1>
     <p style="text-align: center;">just want to try git commands i.e git checkout</p>
+
+    <h2 style="padding: 10px; color: burlywood; text-align: center; font-style: italic;">This is index.html file please be careful not to handle with negligence</h2>
     </div>
         
